-- Fixing responsive layout on Tablet

--- a/src/css/Layout.scss
+++ b/src/css/Layout.scss
@@ -8,7 +8,7 @@ body {
 	margin: 0 auto;
 	padding: 0 20px;
 
-	@include breakpoint(desktop) {
+	@include breakpoint(tabletL) {
 		max-width: 1280px;
 		padding: 0;
 	}
