--- a/src/widgets/RecommendedProducts/RecommendedProducts.scss
+++ b/src/widgets/RecommendedProducts/RecommendedProducts.scss
@@ -25,6 +25,7 @@
 			&__img {
 				margin: 0 auto;
 				transition: transform 0.15s ease-in-out;
+				width: 100%;
 
 				&--wrapper {
 					margin: 0 auto;
